Fixing password reset fuctionality